--- a/homework1.ipynb
+++ b/homework1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "640d7890-4e4f-40ee-9104-87a667da5edb",
    "metadata": {},
    "outputs": [
@@ -10,18 +10,19 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Số nguyên n: -3\n"
+      "Số nguyên n: 2\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-6\n"
+      "4\n"
      ]
     }
    ],
    "source": [
+    "#Bai1\n",
     "a = int(input(\"Số nguyên n:\"))\n",
     "print(a*2)"
    ]
@@ -49,6 +50,7 @@
     }
    ],
    "source": [
+    "#Bai2\n",
     "a = float(input(\"a:\"))\n",
     "if a <= 0:\n",
     "    print(\"chiều rộng phải lớn hơn 0\")\n",
@@ -84,6 +86,7 @@
     }
    ],
    "source": [
+    "#Bai3\n",
     "c = input(\"Nhập một ký tự: \")\n",
     "if c.isupper():\n",
     "    print(c.lower())\n",
@@ -115,6 +118,7 @@
     }
    ],
    "source": [
+    "#Bai4\n",
     "c = input(\"Nhập chữ cái:\")\n",
     "\n",
     "if c.isupper():\n",
@@ -147,6 +151,7 @@
     }
    ],
    "source": [
+    "#Bai5\n",
     "c = input(\"Nhập chữ cái\")\n",
     "\n",
     "if c == \"A\":\n",
@@ -183,6 +188,7 @@
     }
    ],
    "source": [
+    "#Bai6\n",
     "import math\n",
     "a = float(input(\"độ dài cạnh a:\"))\n",
     "b = float(input(\"độ dài cạnh b:\"))\n",
@@ -219,6 +225,7 @@
     }
    ],
    "source": [
+    "#Bai7\n",
     "chuoi = input(\"Nhập chuỗi có độ dài >=20:\")\n",
     "\n",
     "if len(chuoi) >=20:\n",
@@ -230,8 +237,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "efe33be2-5632-4ad4-b960-14798e62c7de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Họ tên chủ hộ: huy\n",
+      "Số điện tháng trước: 2097\n",
+      "Số điện tháng này: 2278\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "huy\n",
+      "tổng: 426038\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Bai8\n",
+    "name = input(\"Họ tên chủ hộ:\")\n",
+    "thang_truoc = int(input(\"Số điện tháng trước:\"))\n",
+    "thang_nay = int(input(\"Số điện tháng này:\"))                                                         \n",
+    "\n",
+    "so_dien = thang_nay - thang_truoc\n",
+    "print(name)\n",
+    "\n",
+    "if 0< so_dien <=50:\n",
+    "    print(\"tổng:\", f'{so_dien*1984*1.08:.0f}')\n",
+    "elif 50< so_dien <=100:\n",
+    "    print(\"tổng:\", f'{(50*1984+(so_dien-50)*2050)*1.08:.0f}')\n",
+    "elif 100< so_dien <=200:\n",
+    "    print(\"tổng:\", f'{(50*1984+50*2050+(so_dien-100)*2380)*1.08:.0f}')\n",
+    "elif 200< so_dien <=300:\n",
+    "    print(\"tổng:\", f'{(50*1984+50*2050+100*2380+(so_dien-200)*2998)*1.08:.0f}')\n",
+    "elif 300< so_dien <=400:\n",
+    "    print(\"tổng:\", f'{(50*1984+50*2050+100*2380+100*2998+(so_dien-300)*3350)*1.08:.0f}')\n",
+    "elif so_dien > 400:\n",
+    "    print(\"tổng tiền phải trả:\", f'{(50*1984+50*2050+100*2380+100*2998+100*3350+(so_dien-400)*3460)*1.08:.0f}')\n",
+    "else:\n",
+    "    print(\"số điện tháng sau phải lớn hơn tháng trước\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92c6cac7-5db0-42cb-b4f5-661e57215b36",
    "metadata": {},
    "outputs": [],
    "source": []
